4.48

- Fixed: AI revive routine did not end when a player was revived
- Improved: Destroying vehicles at base check