@@ -1,112 +1,0 @@
-/*%FSM<COMPILE "E:\Steam\steamapps\common\Arma 3 Tools\FSMEditor\scriptedFSM.cfg, DeleteEmpty">*/
-/*%FSM<HEAD>*/
-/*
-item0[] = {"Start",0,4346,-34.158474,-186.437271,55.841530,-136.437271,0.000000,"Start"};
-item1[] = {"Delay",4,218,-34.573978,-117.925652,55.426025,-67.925644,0.000000,"Delay"};
-item2[] = {"End",1,250,-34.630585,-38.744061,55.369446,11.255931,0.000000,"End"};
-link0[] = {0,1};
-link1[] = {1,2};
-globals[] = {0.000000,0,0,0,0,640,480,1,6,6316128,1,-302.111694,319.264893,218.814743,-311.019775,748,768,1};
-window[] = {0,-1,-1,-1,-1,1174,234,1822,234,1,766};
-*//*%FSM</HEAD>*/
-class FSM
-{
-        fsmName = "DeleteEmpty";
-        class States
-        {
-                /*%FSM<STATE "Start">*/
-                class Start
-                {
-                        name = "Start";
-                        itemno = 0;
-                        init = /*%FSM<STATEINIT""">*/"params [""_tpos"", ""_tradius"", ""_delfirebase_objects""];" \n
-                         "" \n
-                         "private _delpos =+ _tpos;" \n
-                         "" \n
-                         "private _mtmissionobjs =+ d_mtmissionobjs;" \n
-                         "d_mtmissionobjs = [];" \n
-                         "" \n
-                         "private _delvecsmt =+ d_delvecsmt;" \n
-                         "d_delvecsmt = [];" \n
-                         "{" \n
-                         "	_delfirebase_objects pushBackUnique _x;" \n
-                         "	_x setVariable [""d_v_p_mt_t"", getPosATL _x];" \n
-                         "} forEach _delvecsmt;" \n
-                         "" \n
-                         "private _endtime = time + 90 + (random 60);" \n
-                         "" \n
-                         "private _tradplus = _tradius + 100;" \n
-                         "private _delmines = allMines select {_x distance2D _delpos < _tradplus};"/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "Delay">*/
-                                class Delay
-                                {
-                                        itemno = 1;
-                                        priority = 0.000000;
-                                        to="End";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"time > _endtime"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-                /*%FSM<STATE "End">*/
-                class End
-                {
-                        name = "End";
-                        itemno = 2;
-                        init = /*%FSM<STATEINIT""">*/"private _vecs = [];" \n
-                         "{_vecs append _x} forEach (missionNamespace getVariable format [""d_veh_a_%1"", d_enemy_side_short]);" \n
-                         "" \n
-                         "private _no = _delpos nearEntities [_vecs, _tradius];" \n
-                         "" \n
-                         "if (_no isNotEqualTo []) then {" \n
-                         "	{" \n
-                         "		if ((crew _x) findIf {_x call d_fnc_isplayer} == -1) then {" \n
-                         "			_x call d_fnc_DelVecAndCrew;" \n
-                         "		} else {" \n
-                         "			_x call d_fnc_dpcpbv;" \n
-                         "		};" \n
-                         "	} forEach _no;" \n
-                         "};" \n
-                         "" \n
-                         "if (_delfirebase_objects isNotEqualTo []) then {" \n
-                         "	{" \n
-                         "		private _d_v_p_mt_t = _x getVariable ""d_v_p_mt_t"";" \n
-                         "		if (isNil ""_d_v_p_mt_t"") then {" \n
-                         "			_x call d_fnc_DelVecAndCrew;" \n
-                         "		} else {" \n
-                         "			if (_x distance2D _d_v_p_mt_t < 100) then {" \n
-                         "				_x call d_fnc_DelVecAndCrew;" \n
-                         "			};" \n
-                         "		};" \n
-                         "	} forEach (_delfirebase_objects select {!isNull _x});" \n
-                         "};" \n
-                         "" \n
-                         "{" \n
-                         "	deleteVehicle _x;" \n
-                         "} forEach _delmines;" \n
-                         "" \n
-                         "{" \n
-                         "	if (_x isKindOf ""House"") then {_x setDamage 0};" \n
-                         "	deleteVehicle _x;" \n
-                         "} forEach (_mtmissionobjs select {!isNull _x});" \n
-                         ""/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                        };
-                };
-                /*%FSM</STATE>*/
-        };
-        initState="Start";
-        finalStates[] =
-        {
-                "End",
-        };
-};
-/*%FSM</COMPILE>*/
