@@ -1,94 +1,0 @@
-/*%FSM<COMPILE "E:\Steam\steamapps\common\Arma 3 Tools\FSMEditor\scriptedFSM.cfg, DeleteUnits">*/
-/*%FSM<HEAD>*/
-/*
-item0[] = {"Start",0,4346,-41.563808,-188.456924,48.436195,-138.456924,0.000000,"Start"};
-item1[] = {"Delay",4,218,-34.573978,-117.925652,55.426025,-67.925644,0.000000,"Delay"};
-item2[] = {"End",1,250,-34.630585,-38.744061,55.369446,11.255931,0.000000,"End"};
-link0[] = {0,1};
-link1[] = {1,2};
-globals[] = {0.000000,0,0,0,0,640,480,1,6,6316128,1,-302.111694,319.264893,512.315918,-331.894562,923,1254,1};
-window[] = {2,-1,-1,-1,-1,900,182,1142,182,3,941};
-*//*%FSM</HEAD>*/
-class FSM
-{
-        fsmName = "DeleteUnits";
-        class States
-        {
-                /*%FSM<STATE "Start">*/
-                class Start
-                {
-                        name = "Start";
-                        itemno = 0;
-                        init = /*%FSM<STATEINIT""">*/"private _index = _this;" \n
-                         "" \n
-                         "private _mtunits =+ d_delinfsm;" \n
-                         "d_delinfsm = [];" \n
-                         "" \n
-                         "private _old_units_trigger = [(d_target_names select _index) select 0, [500, 500, 0, false], [d_enemy_side, ""PRESENT"", false], [""this"", """", """"]] call d_fnc_createtriggerlocal;" \n
-                         "" \n
-                         "if (!isNil ""d_mines_created"" && {d_mines_created isNotEqualTo []}) then {" \n
-                         "	{deleteVehicle _x} forEach d_mines_created;" \n
-                         "	d_mines_created = [];" \n
-                         "};" \n
-                         "" \n
-                         "private _timenow = time + 90;"/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                                /*%FSM<LINK "Delay">*/
-                                class Delay
-                                {
-                                        itemno = 1;
-                                        priority = 0.000000;
-                                        to="End";
-                                        precondition = /*%FSM<CONDPRECONDITION""">*/""/*%FSM</CONDPRECONDITION""">*/;
-                                        condition=/*%FSM<CONDITION""">*/"time > _timenow"/*%FSM</CONDITION""">*/;
-                                        action=/*%FSM<ACTION""">*/""/*%FSM</ACTION""">*/;
-                                };
-                                /*%FSM</LINK>*/
-                        };
-                };
-                /*%FSM</STATE>*/
-                /*%FSM<STATE "End">*/
-                class End
-                {
-                        name = "End";
-                        itemno = 2;
-                        init = /*%FSM<STATEINIT""">*/"{" \n
-                         "	if !(_x isKindOf ""CAManBase"") then {" \n
-                         "		if ((crew _x) findIf {_x call d_fnc_isplayer} == -1) then {" \n
-                         "			_x call d_fnc_DelVecAndCrew;" \n
-                         "		} else {" \n
-                         "			_x call d_fnc_dpcpbv;" \n
-                         "		};" \n
-                         "	} else {" \n
-                         "		if !(_x call d_fnc_isplayer) then {deleteVehicle _x};" \n
-                         "	};" \n
-                         "} forEach ((list _old_units_trigger) unitsBelowHeight 20);" \n
-                         "" \n
-                         "deleteVehicle _old_units_trigger;" \n
-                         "" \n
-                         "_mtunits = _mtunits - [objNull];" \n
-                         "if (d_ai_persistent_corpses != 0) then {" \n
-                         "	{" \n
-                         "		_x setDamage 1;" \n
-                         "	} forEach _mtunits;" \n
-                         "} else {" \n
-                         "	{" \n
-                         "		deleteVehicle _x;" \n
-                         "	} forEach _mtunits;" \n
-                         "};"/*%FSM</STATEINIT""">*/;
-                        precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
-                        class Links
-                        {
-                        };
-                };
-                /*%FSM</STATE>*/
-        };
-        initState="Start";
-        finalStates[] =
-        {
-                "End",
-        };
-};
-/*%FSM</COMPILE>*/
