@@ -3,31 +3,47 @@
 #define THIS_FILE "fn_cleanerfnc.sqf"
 #include "..\x_setup.sqf"
 
+private _cfunc = {
+	if (!isNil "d_delstuff_run") then {
+		waitUntil {sleep 1; isNil "d_delstuff_run"};
+	};
+	if (!isNil "d_delempty_run") then {
+		waitUntil {sleep 1; isNil "d_delempty_run"};
+	};
+	sleep 0.1;
+};
+
 while {true} do {
 	sleep (300 + random 150);
+	call _cfunc;
 	private _allmisobjs = allMissionObjects "WeaponHolder";
 	sleep 8;
+	call _cfunc;
 	private _helperx = entities [["WeaponHolderSimulated", "Plane_Canopy_Base_F", "Ejection_Seat_Base_F"], []];
 	if (_helperx isNotEqualTo []) then {
 		_allmisobjs append _helperx;
 	};
 	sleep 8;
+	call _cfunc;
 	_helperx = allMissionObjects "Chemlight_base";
 	if (_helperx isNotEqualTo []) then {
 		_allmisobjs append _helperx;
 	};
 	sleep 8;
+	call _cfunc;
 	_helperx = allMissionObjects "Crater";
 	if (_helperx isNotEqualTo []) then {
 		_allmisobjs append _helperx;
 	};
 	sleep 8;
+	call _cfunc;
 	_helperx = allMissionObjects "CraterLong";
 	if (_helperx isNotEqualTo []) then {
 		_allmisobjs append _helperx;
 	};
 	sleep 8;
 	if (_allmisobjs isNotEqualTo []) then {
+		call _cfunc;
 		{
 			if (!isNull _x) then {
 				private _ct = _x getVariable ["d_checktime", -1];
@@ -53,6 +69,7 @@ while {true} do {
 	_allmisobjs = nil;
 	sleep 4;
 	if (!isNil "d_player_created") then {
+		call _cfunc;
 		{
 			private _hastime = _x getVariable "d_end_time";
 			if (!isNil "_hastime" && {time > _hastime}) then {
@@ -64,17 +81,20 @@ while {true} do {
 					};
 				};
 			};
+			sleep 0.01;
 		} forEach (d_player_created select {!isNull _x});
 		d_player_created = d_player_created - [objNull];
 	};
 	sleep 4;
 	if (!isNil "d_airboxes" && {d_airboxes isNotEqualTo []}) then {
+		call _cfunc;
 		{
 			private _mname = _x getVariable "d_mname";
 			if (!isNil "_mname") then {
 				deleteMarker _mname;
 			};
 			deleteVehicle _x;
+			sleep 0.01;
 		} forEach (d_airboxes select {time > _x getVariable ["d_airboxtime", -1]});
 		d_airboxes = d_airboxes - [objNull];
 	};
